# c-opentimestamps

./: CMakeLists.txt  README.md  main.cpp
src/: Attestation.cpp  Attestation.h  Common.cpp  Common.h  Context.h  DetachedFile.cpp  DetachedFile.h  Op.cpp  Op.h  Timestamp.cpp  Timestamp.h
swig/: build.sh  example.py  ots.i  setup.py
